--- a/src/html/main.html
+++ b/src/html/main.html
@@ -48,7 +48,7 @@
     </div>
 
     <input type="button" class="btn btn-default" id="sendButton" value="Send"
-           onclick="send(document.getElementById('publish').value);"/><br><br>
+           onclick="ajaxCall(); send(document.getElementById('publish').value);"/><br><br>
 
 
     </form>
