accidently deleted 3 lines of code in merge. Reverting

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -54,6 +54,9 @@
 
 
 <script type="text/javascript" src="../JavaScript/ajaxfunction.js"></script>
+<script type="text/javascript" src="../JavaScript/mqttws31.js"></script>
+<script type="text/javascript" src="../JavaScript/jquery.min.js"></script>
+<script type="text/javascript" src="../JavaScript/client.js"></script>
 
 </body>
 </html>
