--- a/src/html/main.html
+++ b/src/html/main.html
@@ -25,7 +25,7 @@
     </div>
 
     <input type="button" class="btn btn-default" id="sendButton" value="Send"
-           onclick="ajaxCall(); send(document.getElementById('publish').value);"/><br><br>
+           onclick="send();"/><br><br>
 
 
     </form>
@@ -53,7 +53,6 @@
 </div>
 
 
-<script type="text/javascript" src="../JavaScript/ajaxfunction.js"></script>
 <script type="text/javascript" src="../JavaScript/mqttws31.js"></script>
 <script type="text/javascript" src="../JavaScript/jquery.min.js"></script>
 <script type="text/javascript" src="../JavaScript/client.js"></script>
