--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,11 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <script type="text/javascript" src="../JavaScript/mqttws31.js"></script>
-    <script type="text/javascript" src="../JavaScript/client.js"></script>
+
     <link rel="stylesheet" href="../css/stylesheet.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-
 </head>
 <body>
 
@@ -17,46 +15,26 @@
         <div class="col-lg-10">
             <textarea class="form-control" rows="3" id="publish"></textarea><br>
         </div>
-
-        <!-- This will have to change depending on the number of arduinos plugged in -->
         <br>
+
+
+        <label for="checkbox" class="col-lg-2 control-label">Send To:</label>
+        <div id="checkbox">
+        </div>
+
+        <input type="button" class="btn btn-default" id="sendButton" value="Send"
+               onclick="send();"/><br><br>
+
 
     </form>
 
-    <label for="checkbox" class="col-lg-2 control-label">Send To:</label>
-    <div id="checkbox">
-        <div>
-            <label>
-                <input type="checkbox" id="arduino1"> Arduino1
-            </label>
-        </div>
-        <div>
-            <label>
-                <input type="checkbox" id="arduino2"> Arduino2
-            </label>
-        </div>
-        <div>
-            <label>
-                <input type="checkbox" id="arduino3"> Arduino3
-            </label>
-        </div>
-        <div>
-            <label>
-                <input type="checkbox" id="arduino4"> Arduino4
-            </label>
-        </div>
+    <div class="alert alert-dismissible alert-success" id="successBox">
+        <strong>Message Sent!</strong>
     </div>
 
-    <input type="button" class="btn btn-default" id="sendButton" value="Send"
-           onclick="send(document.getElementById('publish').value);"/><br><br>
-
-    <!--  confirmation dialogue
-
-       <div class="alert alert-dismissible alert-success">
-           <button type="button" class="close" data-dismiss="alert">&times;</button>
-           <strong>Message Sent!</strong>
-       </div>
-   -->
+    <div class="progress progress-striped active">
+        <div class="progress-bar" style="width: 45%"></div>
+    </div>
 
 </div>
 
@@ -72,10 +50,13 @@
     <button type="button" onclick="CSV_download();" class="btn btn-default" id="exportButton">Export to CSV</button>
 </div>
 
-<div class="progress progress-striped active">
-    <div class="progress-bar" style="width: 45%"></div>
-</div>
 
+
+
+
+<script type="text/javascript" src="../JavaScript/mqttws31.js"></script>
+<script type="text/javascript" src="../JavaScript/jquery.min.js"></script>
+<script type="text/javascript" src="../JavaScript/client.js"></script>
 
 </body>
 </html>
