Changed color of progress bar

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -32,8 +32,8 @@
         <strong>Message Sent!</strong>
     </div>
 
-    <div class="progress progress-striped active">
-        <div class="progress-bar" style="width: 45%"></div>
+    <div class="progress progress-striped">
+        <div class="progress-bar progress-bar-info" id="progressBar" style="width: 0"></div>
     </div>
 
 </div>
