--- a/src/web_portal/html/main.html
+++ b/src/web_portal/html/main.html
@@ -8,6 +8,10 @@
 <body>
 
 
+<div class="container">
+<div class="col-lg-12 ifn-header text-center">
+    Ion Field Network
+</div>
 <div id="left">
     <form action="">
 
@@ -48,6 +52,7 @@
     </div>
 
     <button type="button" onclick="CSV_download();" class="btn btn-default" id="exportButton">Export to CSV</button>
+</div>
 </div>
 
 <script type="text/javascript" src="../JavaScript/mqttws31.js"></script>
