--- a/src/web_portal/html/main.html
+++ b/src/web_portal/html/main.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-
     <link rel="stylesheet" href="../css/stylesheet.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
 </head>
-<body>
-
+<body class="ifn-body">
 
 <div class="container">
 <div class="col-lg-12 ifn-header text-center">
-    Ion Field Network
+    <h1>Ion Field Network</h1>
 </div>
+<div class="main-panel">
+<div class="container">
 <div id="left">
     <form action="">
 
@@ -52,6 +52,12 @@
     </div>
 
     <button type="button" onclick="CSV_download();" class="btn btn-default" id="exportButton">Export to CSV</button>
+</div>
+</div>
+<br><br>
+<div class="footer-panel text-center">
+    <h4>&copy; 2016 - Ion Field Network</h4>
+</div>
 </div>
 </div>
 
