Added a status box in the top right corner

--- a/src/web_portal/html/main.html
+++ b/src/web_portal/html/main.html
@@ -9,6 +9,7 @@
 <div class="container">
 <div class="col-lg-12 ifn-header text-center">
     <h1>Ion Field Network</h1>
+    <span class="label label-warning" id="statusBox">Disconnected</span>
 </div>
 <div class="main-panel">
 <div class="container">
