--- a/src/web_portal/html/main.html
+++ b/src/web_portal/html/main.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <button type="button" onclick="CSV_download();" class="btn btn-default" id="exportButton">Export to CSV</button>
+    <button type="button" class="btn btn-default" id="exportButton">Export to CSV</button>
 </div>
 </div>
 <br><br>
@@ -62,6 +62,7 @@
 </div>
 </div>
 
+<script src="../../web_portal/JavaScript/PapaParse-4.3.2/papaparse.min.js"></script>
 <script type="text/javascript" src="../JavaScript/mqttws31.js"></script>
 <script type="text/javascript" src="../JavaScript/jquery.min.js"></script>
 <script type="text/javascript" src="../JavaScript/client.js"></script>
