got rid of junk files from library

--- a/src/web_portal/html/main.html
+++ b/src/web_portal/html/main.html
@@ -62,7 +62,7 @@
 </div>
 </div>
 
-<script src="../../web_portal/JavaScript/PapaParse-4.3.2/papaparse.min.js"></script>
+<script src="../JavaScript/papaparse.min.js"></script>
 <script type="text/javascript" src="../JavaScript/mqttws31.js"></script>
 <script type="text/javascript" src="../JavaScript/jquery.min.js"></script>
 <script type="text/javascript" src="../JavaScript/client.js"></script>
