--- a/src/web_portal/html/main.html
+++ b/src/web_portal/html/main.html
@@ -5,62 +5,72 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
 </head>
 <body class="ifn-body">
-
-<div class="container">
-<div class="col-lg-12 ifn-header text-center">
-    <h1>Ion Field Network</h1>
-    <span class="label label-warning" id="statusBox">Disconnected</span>
-</div>
-<div class="main-panel">
-<div class="container">
-<div id="left">
-    <form action="">
-
-        <label for="publish" class="col-lg-2 control-label">Enter Query:</label>
-        <div class="col-lg-10">
-            <textarea class="form-control" rows="3" id="publish"></textarea><br>
-        </div>
-        <br>
-
-
-        <label for="checkbox" class="col-lg-2 control-label">Send To:</label>
-        <div id="checkbox">
-        </div>
-
-        <input type="button" class="btn btn-default" id="sendButton" value="Send"
-               onclick="send();"/><br><br>
-
-
-    </form>
-
-    <div class="alert alert-dismissible alert-success" id="successBox">
-        <strong>Message Sent!</strong>
-    </div>
-
-    <div class="progress progress-striped">
-        <div class="progress-bar progress-bar-info" id="progressBar" style="width: 0"></div>
-    </div>
-
-</div>
-
-<div id="right">
-    <div class="form-group">
-        <label for="resultArea" class="col-lg-2 control-label">Results:</label>
-        <div class="col-lg-10">
-            <textarea class="form-control" rows="3" id="resultArea">
-            </textarea>
+    <div class="col-lg-12 ifn-header text-center">
+        <div>
+            <h1>Ion Field Network</h1>
+            <span class="label label-warning" id="statusBox">Disconnected</span>
         </div>
     </div>
 
-    <button type="button" onclick="CSV_download();" class="btn btn-default" id="exportButton">Export to CSV</button>
+    <div class="spacer">
+        <br><br><br><br><br>
+    </div>
+
+    <div class="container">
+        <div id="left">
+            <form action="">
+                <label for="publish" class="col-lg-2 control-label">Enter Query:</label>
+                <div class="col-lg-10">
+                    <textarea class="form-control" rows="10" id="publish"></textarea><br>
+                </div>
+                <br>
+                <label for="checkbox" class="col-lg-2 control-label">Send To:</label>
+                <div id="checkbox"></div>
+                <input type="button" class="btn btn-default" id="sendButton" value="Send"
+                       onclick="send();"/><br><br>
+            </form>
+            <div class="alert alert-dismissible alert-success" id="successBox">
+                <strong>Message Sent!</strong>
+            </div>
+        </div>
+
+        <div id="right">
+            <div class="form-group">
+                <label for="resultArea" class="col-lg-2 control-label">Results:</label>
+                <div class="col-lg-10">
+                    <textarea class="form-control" rows="10" id="resultArea">
+                    </textarea>
+                </div>
+            </div>
+            <button type="button" onclick="CSV_download();" class="btn btn-default" id="exportButton">Export to CSV</button>
+        </div>
+
+        <div id="history">
+            <label for="queryhistory" class="col-lg-2 control-label col-md-offset-5">Query History</label>
+            <div class="form-group">
+                <div class="col-lg-10 col-md-offset-1">
+                    <textarea class="form-control" rows="10" id="queryhistory">
+                    </textarea>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="prog">
+        <!-- Used as a spacer -->
+        <div class="row">
+            <h4><b>Query Status:</b></h4>
+        </div>
+        <div class="progress progress-striped">
+            <div class="progress-bar progress-bar-info" id="progressBar"></div>
+        </div>
+    </div>
+
+    <div class="footer-panel text-center">
+        <h4>Ion Field Network</h4>
+    </div>
 </div>
-</div>
-<br><br>
-<div class="footer-panel text-center">
-    <h4>&copy; 2016 - Ion Field Network</h4>
-</div>
-</div>
-</div>
+
 
 <script type="text/javascript" src="../JavaScript/mqttws31.js"></script>
 <script type="text/javascript" src="../JavaScript/jquery.min.js"></script>
