--- a/src/web_portal/html/main.html
+++ b/src/web_portal/html/main.html
@@ -12,31 +12,31 @@
         </div>
     </div>
 
-    <div class="spacer">
-        <br><br><br><br><br>
+    <div class="header_row">
+    
     </div>
 
     <div class="container">
         <div id="left">
-            <form action="">
-                <label for="publish" class="col-lg-2 control-label">Enter Query:</label>
                 <div class="col-lg-10">
-                    <textarea class="form-control" rows="10" id="publish"></textarea><br>
+                    <label for="publish" class="col-lg-12 control-label"><h4><b>Query</b></h4></label>
+                    <textarea class="form-control" rows="10" id="publish" placeholder="Enter a query here"></textarea><br>
                 </div>
-                <br>
-                <label for="checkbox" class="col-lg-2 control-label">Send To:</label>
-                <div id="checkbox"></div>
-                <input type="button" class="btn btn-default" id="sendButton" value="Send"
-                       onclick="send();"/><br><br>
-            </form>
-            <div class="alert alert-dismissible alert-success" id="successBox">
-                <strong>Message Sent!</strong>
-            </div>
+
+                <label for="checkbox" class="col-lg-6 control-label col-md-offset-1"><h4><b>Available Arduinos</b></h4></label>
+                <div class="col-lg-3" id="checkbox"></div>
+                    <input type="button" class="btn btn-default" id="sendButton" value="Send"
+                           onclick="send();"/><br><br>
+
+                <div class="alert alert-dismissible alert-success" id="successBox">
+                    <strong>Message Sent!</strong>
+                </div>
         </div>
 
+
         <div id="right">
+            <label for="resultArea" class="col-lg-10 control-label"><h4><b>Query Results</b></h4></label>
             <div class="form-group">
-                <label for="resultArea" class="col-lg-2 control-label">Results:</label>
                 <div class="col-lg-10">
                     <textarea class="form-control" rows="10" id="resultArea">
                     </textarea>
@@ -46,7 +46,7 @@
         </div>
 
         <div id="history">
-            <label for="queryhistory" class="col-lg-2 control-label col-md-offset-5">Query History</label>
+            <label for="queryhistory" class="col-lg-14 control-label"><h4><b>Query History</b></h4></label>
             <div class="form-group">
                 <div class="col-lg-10 col-md-offset-1">
                     <textarea class="form-control" rows="10" id="queryhistory">
@@ -57,7 +57,6 @@
     </div>
 
     <div class="prog">
-        <!-- Used as a spacer -->
         <div class="row">
             <h4><b>Query Status:</b></h4>
         </div>
@@ -70,11 +69,8 @@
         <h4>Ion Field Network</h4>
     </div>
 </div>
-
-
 <script type="text/javascript" src="../JavaScript/mqttws31.js"></script>
 <script type="text/javascript" src="../JavaScript/jquery.min.js"></script>
 <script type="text/javascript" src="../JavaScript/client.js"></script>
-
 </body>
 </html>
