Renamed JavaScript folder --> js

--- a/src/web_portal/html/main.html
+++ b/src/web_portal/html/main.html
@@ -63,9 +63,9 @@
     <h4>Ion Field Network</h4>
 </div>
 
-<script type="text/javascript" src="../JavaScript/mqttws31.js"></script>
-<script type="text/javascript" src="../JavaScript/jquery.min.js"></script>
-<script type="text/javascript" src="../JavaScript/bootstrap.min.js"></script>
-<script type="text/javascript" src="../JavaScript/client.js"></script>
+<script type="text/javascript" src="../js/mqttws31.js"></script>
+<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../js/client.js"></script>
 </body>
 </html>
