--- a/src/web_portal/main.html
+++ b/src/web_portal/main.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <link rel="stylesheet" href="../css/stylesheet.css">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css"> 
 </head>
 <body class="ifn-body">
     <div class="col-lg-12 ifn-header text-center">
@@ -47,25 +47,15 @@
             </div>
         </div>
     </div>
-
-    <div class="prog">
-        <div class="row">
-            <h4><b>Query Status</b></h4>
-        </div>
-        <div class="progress">
-            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
-                <span class="sr-only">45% Complete</span>
-            </div>
-        </div>
 </div>
-
+<div class="row"></div>
 <div class="footer-panel text-center">
     <h4>Ion Field Network</h4>
 </div>
 
-<script type="text/javascript" src="../js/mqttws31.js"></script>
-<script type="text/javascript" src="../js/jquery.min.js"></script>
-<script type="text/javascript" src="../js/bootstrap.min.js"></script>
-<script type="text/javascript" src="../js/client.js"></script>
+<script type="text/javascript" src="js/mqttws31.js"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/client.js"></script>
 </body>
 </html>
