Remove '+' symbol from right div

--- a/src/web_portal/main.html
+++ b/src/web_portal/main.html
@@ -35,7 +35,7 @@
                     <textarea class="form-control" rows="10" id="resultArea"></textarea>
                 </div>
             </div>
-             +    <button type="button" class="btn btn-default" id="exportButton">Export to CSV</button>
+            <button type="button" class="btn btn-default" id="exportButton">Export to CSV</button>
         </div>
 
         <div id="history">
